--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,5 +1,6 @@
 <h1>About</h1>
 <h5>我的倉儲:<a href="https://github.com/40832244">https://github.com/40832244</a><br/>課程網站:<a href="http://mde.tw/cad2020/content/index.html">http://mde.tw/cad2020/content/index.html</a></h5>
+<p>小組網站:<a href="http://40823251.github.io/cad2020bg1">http://40823251.github.io/cad2020bg1</a></p>
 <h1>組員名單</h1>
 <p><br/><a href="https://s40723224.github.io/cad2020">40723224</a><span> 范誠宇</span><br/><a href="https://40823204.github.io/cad2020">40823204</a><span> 賴惟嘉</span><br/><a href="https://40823212.github.io/cad2020">40823212</a><span> 陳逸翔</span><br/><a href="https://40823215.github.io/cad2020">40823215</a><span> 謝閎璾</span><br/><a href="https://40823219.github.io/cad2020">40823219</a><span> 廖顯紘</span><br/><a href="https://40823225.github.io/cad2020">40823225</a><span> 徐誠隆 </span><br/><a href="https://40823226.github.io/cad2020">40823226</a><span> 蘇柏瑋 </span><br/><a href="https://40823234.github.io/cad2020">40823234</a><span> 游子毅</span><br/><a href="https://40823250.github.io/cad2020">40823250</a><span> 張哲瑀</span><br/><a href="https://40823251.github.io/cad2020">40823251</a><span> 林進益</span><br/><a href="https://40832244.github.io/cad2020">40832244</a> 林晉廷</p>
 <h1>個人進度</h1>
